name:                orgmode
version:             0.1.0.0
synopsis:            Org mode document manipulation in haskell
license:             BSD3
license-file:        LICENSE
author:              Simon Bergot
maintainer:          simon.bergot@gmail.com
category:            Data
build-type:          Simple
cabal-version:       >=1.8

library
  build-depends:       base ==4.6.*,
                       containers,
                       parsec ==3.1.*,
                       text ==0.11.3.*
  hs-source-dirs:      src
  ghc-options:      -Wall
  exposed-modules: OrgMode

source-repository head
  type:      git
  location:  https://github.com/sbergot/haskellorgmode

test-suite Tests
  type:           exitcode-stdio-1.0
  main-is:        MainTest.hs
  ghc-options:    -Wall
  build-depends:
                  base >= 4,
                  containers,
                  parsec ==3.1.*,
                  text ==0.11.3.*,
                  tasty,
                  tasty-hspec
  other-modules:  OrgModeTest
  hs-source-dirs: tests, src
